@@ -1,3 +1,10 @@
+2022-01-29 Gabriele Gorla <gorlik@yahoo.com>
+
+    * sdcc/src/mos6502/gen.c,
+      sdcc/src/mos6502/ralloc.c,
+      sdcc/src/mos6502/ralloc2.cc:
+      Fix a overflow bug in dry run cost calculation.
+
 2022-01-28 Gabriele Gorla <gorlik@yahoo.com>
 
     * sdcc/src/mos6502/gen.c:
